Changelog since cleanup-branch of 31.01.2020


changelog of master-branch
    - re-added support for custom block renderers
    - added support for OR-condition in block-states
    - block-states act when selecting from multiple models better
    - block models can now rotate themselves
    - tweaked generation system to look more faster and be more faster
    - world generation is now done parallel across up to 5 chunks
    - improved block-showing performance by caching (rotated) vertices and texture data
    - added config for height of world
    - added an world-generation progress-view screen like in MC
    - added config for how far the world is generated when you are in-game, default is 1 chunk in each direction


changelog of snapshot 20w10a [released on 04.03.2020]
    - updated libraries
    - added datapack support
    - added gamerules
    - new commands: /clone, /tell, /replaceitem, /gamerule
    - added multipart-block-model support
    - added generator code for creating BoundingBox from BlockState
    - BoxModels will now rotate properly relative to middle of block, not only changing textures
    - added new blocks: fences, walls
    - TickHandler has now an function to tick an function as fast as possible
    - added option for fog distance
    fixed bugs:
        - various exceptions from left-over things in the registry & slot changes from last snapshot
        - various issues with slot drawing
        - fixed exception on shift-clicking crafting output of main inventory


changelog of snapshot 20w09a [released on 26.02.2020]
    - changed TextureAtlas-block-addition system to be based on mod-based/texture size-based atlases
    - new blocks: furnace with inventory & crafting, barrel, ice variants, bone block, book shelf, coral blocks,
                  pumpkin, carved pumpkin, melon, clay, coarse dirt, prismarin blocks, dried kelp block, end stones,