@@ -893,6 +893,11 @@ started these clone on 12th of July, 2019
 
 plans for this branch:
     - implement an save system
+    todo: add gamerules to saves
+    todo: add seed to saves
+    todo: add barrier & auto gen options to saves
+    todo: add temperature, height and biome map to saves
+    todo: add block-inventories to save files
 
     - implement an mc-file converter [use an DataFixer-like interface]
 
